Fix not centered image

--- a/pages/photography.module.scss
+++ b/pages/photography.module.scss
@@ -6,6 +6,9 @@
 }
 
 .photo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
 
   img {
